--- a/exercises/random-cats/.htaccess
+++ b/exercises/random-cats/.htaccess
@@ -1,6 +1,6 @@
-DirectoryIndex index.html
+DirectoryIndex index.php
 ErrorDocument 404 https://daanrosendal.com/404
 RewriteEngine On
 RewriteRule ^home$ index
 RewriteCond %{REQUEST_FILENAME} !-f
-RewriteRule ^([^\.]+)$ $1.html [NC,L]
+RewriteRule ^([^\.]+)$ $1.php [NC,L]
